# fastapi-cloud-test

./: .fastapicloudignore  README.md  main.py  pyproject.toml
docs/superpowers/plans/: 2026-06-22-app-frontend-minimal.md  2026-06-22-nextjs-static-export-fastapi.md
docs/superpowers/specs/: 2026-06-22-fastapi-cloud-frontend-design.md  2026-06-22-nextjs-static-export-fastapi-design.md
frontend/: .gitignore  package-lock.json
frontend/app/: layout.tsx  page.tsx
tests/: test_app.py
web/: index.html  style.css
